2015-04-06  Ola Jeppsson  <ola@adapteva.com>

	* scripts/build_and_test_all.sh: Filter out apps/fft2d when
	cross compilation is detected. It is hard to satisfy library
	requirements.
	Skip repeated tests when cross compilation is detected.
	Pretty printing adjustments.

2015-04-06  Ola Jeppsson  <ola@adapteva.com>

	* apps/matmul-16/build.sh: Detect cross compilation and pass
	cross compiler to make if so.
	* apps/matmul-64/build.sh: Likewise.
	* apps/matmul-16/host/Debug/makefile: Use $(CC) instead of
	gcc.
	* apps/matmul-16/host/Debug/src/subdir.mk: Likewise.
	* apps/matmul-16/host/Release/makefile: Likewise.
	* apps/matmul-16/host/Release/src/subdir.mk: Likewise.
	* apps/matmul-64/host/Debug/makefile: Likewise.
	* apps/matmul-64/host/Debug/src/subdir.mk: Likewise.
	* apps/matmul-64/host/Release/makefile: Likewise.
	* apps/matmul-64/host/Release/src/subdir.mk: Likewise.

2015-04-06  Ola Jeppsson  <ola@adapteva.com>

	* test/e-mesh-test/build.sh: Satisfy runtime dependencies.

2015-04-06  Ola Jeppsson  <ola@adapteva.com>

	* apps/fft2d/run.sh: Add missing Epiphany elf parameter.
	* apps/fft2d/test.sh: Likewise.

2015-04-06  Ola Jeppsson  <ola@adapteva.com>

	* apps/e-bandwidth-test/build.sh: Don't build srec file
	* apps/e-bandwidth-test/src/e-bandwidth-test-host.c: Use .elf
	instead of srec.
	(int main): Fix segfault.
	(int SRAM_speed): Repeat tests to get more stable results.

2015-04-06  Ola Jeppsson  <ola@adapteva.com>

	* apps/matmul-16/host/src/matmul_host.c: Fix compilation errors.

2015-04-04  Andreas Olofsson  <andreas@adapteva.com>

	* test/e-mesh-test/src/e-task.c (int main): Clarified test

2015-04-04  Andreas Olofsson  <andreas@adapteva.com>

	* test/e-mesh-test/build.sh: Add basic mesh test. New file.
	* test/e-mesh-test/src/e-task.c: New file.
	* test/e-mesh-test/test.sh: New file.

2015-04-04  Andreas Olofsson  <andreas@adapteva.com>

	* apps/eprime/build.sh: Cleanup
	* apps/eprime/src/prime.c (int main): Likewise.