@@ -1,0 +1,42 @@
+language: c
+
+env:
+        EPIPHANY_HOME=/opt/adapteva/esdk
+
+before_install:
+    - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+    - sudo apt-get update -qq
+    - sudo apt-get install -qq libstdc++-4.8-dev
+    - sudo apt-get install -qq gcc-4.8
+    - sudo apt-get install -qq g++-4.8
+    - mkdir cc-link
+    - ln -s $(which gcc-4.8) cc-link/gcc
+    - ln -s $(which g++-4.8) cc-link/g++
+    - export PATH=$(pwd)/cc-link:${PATH}
+    - gcc --version
+    - sudo apt-get install -qq
+      build-essential
+      bison
+      flex
+      g++-arm-linux-gnueabihf
+      gcc-arm-linux-gnueabihf
+      libgmp3-dev
+      libncurses5-dev
+      libmpc-dev
+      libmpfr-dev
+      locate
+      texinfo
+      wget
+      xzip
+      lzip
+      zip
+    - wget http://downloads.parallella.org/esdk/esdk.2015.1_linux_x86_64-devel.tar.gz
+    - tar xfz esdk.2015.1_linux_x86_64-devel.tar.gz
+    - ln -s esdk.2015.1 esdk
+    - sudo mkdir -p /opt/adapteva
+    - sudo mv esdk.2015.1 esdk /opt/adapteva
+
+script:
+    - source $EPIPHANY_HOME/setup.sh
+    - ./scripts/build_and_test_all.sh
+
