@@ -1,3 +1,10 @@
+Epiphany Examples
+=================
+
+[![Build Status](https://travis-ci.org/adapteva/epiphany-examples.svg?branch=master)](https://travis-ci.org/adapteva/epiphany-examples)
+
+---
+
 applications: Complete applications and utilities  
 board:        Various board tests  
 cpu:          Various "howto" examples  
@@ -8,10 +15,14 @@ labs:         Experimental feature testing
 softcache:    Software caching examples  
 test:         Regression tests  
 
+---
+
 To run the TestEpiphany.pl test harness you must define an environment variable
 name EPIPHANY_TESTS which defines the path to the epiphany-examples. The LIST
 file should list the path to the tests run scripts relative to the value of
 EPIPHANY_TESTS.
+
+---
 
 Jenkins: To configure Jenkins to run the Epiphany tests nightly change directories
 to the jenkins directory and execute the setup.sh script. Note that Jenkins must
